src/objects/Environment__c.object
<CustomObject>
    <description>This object manages all the orgs or environments within your governance model</description>
    <fields>
        <fullName>Active__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Active</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Allocation_start_date__c</fullName>
        <label>Allocation start date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Comments__c</fullName>
        <label>Comments</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Description__c</fullName>
        <label>Description</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Environment_Manager__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Environment Manager</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Org</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Initial_Allocation_End_Date__c</fullName>
        <description>Initially agreed termination date for the sandbox</description>
        <label>Initial Allocation End Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Last_Refresh__c</fullName>
        <label>Last Refresh</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Lead_Admin__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Contact on the Org that is key technical contact for the Org</description>
        <label>Lead Admin</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Environment</relationshipLabel>
        <relationshipName>Environment</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Number_of_times_extended__c</fullName>
        <label>Number of times extended</label>
        <precision>10</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Org_ID__c</fullName>
        <description>Unique Salesforce Org Identifier (15 Digit)</description>
        <externalId>true</externalId>
        <label>Org ID</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Org_Type__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Org Type</label>
        <referenceTo>Org_Type__c</referenceTo>
        <relationshipLabel>Environment (Org Type)</relationshipLabel>
        <relationshipName>Environment</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Org_URL__c</fullName>
        <label>Org URL</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>Pre_Release_Org__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Pre-Release Org</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Primary_Use__c</fullName>
        <label>Primary Use</label>
        <picklist>
            <controllingField>Tier__c</controllingField>
            <picklistValues>
                <fullName>Development</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>QA</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Staging</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Training</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>System Testing</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Systems Integration Testing</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Data Migration Testing</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>User Acceptance Testing</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Load &amp; Performance Testing</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Regression Testing</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Proof of Concept</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Pilot</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Continuous Integration</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Citizen Dev Creche</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Metadata Copy</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Pre-Release</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Production</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Pre-Production</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Salesforce_Courtesy_Days__c</fullName>
        <label>Salesforce Courtesy Days</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Salesforce_Courtesy_End__c</fullName>
        <label>Salesforce Courtesy End</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Salesforce_Courtesy_Start__c</fullName>
        <label>Salesforce Courtesy Start</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Salesforce_Courtesy__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Salesforce Courtesy</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Salesforce_Instance__c</fullName>
        <label>Salesforce Instance</label>
        <referenceTo>Instance__c</referenceTo>
        <relationshipName>Org</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <reparentableMasterDetail>true</reparentableMasterDetail>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Tier__c</fullName>
        <label>Tier</label>
        <picklist>
            <picklistValues>
                <fullName>Project</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Common</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Production</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Updated_Allocation_End_date__c</fullName>
        <description>Updated view of the Org termination date</description>
        <label>Updated Allocation End date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>isAvailable__c</fullName>
        <defaultValue>false</defaultValue>
        <label>is available</label>
        <type>Checkbox</type>
    </fields>
    <label>Environment</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Org_Type__c</columns>
        <columns>Salesforce_Instance__c</columns>
        <columns>Org_ID__c</columns>
        <columns>Last_Refresh__c</columns>
        <columns>Description__c</columns>
        <columns>Initial_Allocation_End_Date__c</columns>
        <columns>Lead_Admin__c</columns>
        <columns>Tier__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <listViews>
        <fullName>All1</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <listViews>
        <fullName>All_Cognizant</fullName>
        <columns>NAME</columns>
        <columns>Org_Type__c</columns>
        <columns>Primary_Use__c</columns>
        <columns>Salesforce_Instance__c</columns>
        <columns>Initial_Allocation_End_Date__c</columns>
        <columns>Updated_Allocation_End_date__c</columns>
        <columns>Lead_Admin__c</columns>
        <columns>Last_Refresh__c</columns>
        <filterScope>Everything</filterScope>
        <label>All Cognizant</label>
    </listViews>
    <nameField>
        <label>Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Environment</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>